# Strike-Counter

./: .gitignore  .justfile  CMakeLists.txt  asan_suppressions.txt  readme.md
assets/: config.ini
assets/shaders/: bsp.frag  bsp.vert
client/assets/: strike_counter.fgd  strike_counter.game
client/assets/shaders/: bsp.frag  bsp.vert
client/client/: bsp.c  bsp.h  bsp_gfx.c  bsp_gfx.h  console.c  console.h  gl_common.c  gl_common.h  main.c  wad.c  window.c  window.h
common/common/: file.h  util.h
src/client/: app.c  app.h  bsp.c  bsp.h  bsp_gfx.c  camera.c  camera.h  collision_bsp.c  collision_bsp.h  console.c  main.c  wad.h  window.c  window.h
src/common/: file.c  file.h  log.c  log.h  math.h  str.h
